// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonLink Block adds the bgDanger modifier 1`] = `
.c0 {
  background: transparent;
  color: #8492A6;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #1F2D3D;
  text-decoration: underline;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C0CCDA;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  background-color: #cc1111;
}

.c1:hover,
.c1:focus {
  background-color: #d0d9e3;
  box-shadow: 0 8px 8px 0 rgba(132,146,166,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block adds the fullWidth modifier 1`] = `
.c0 {
  background: transparent;
  color: #8492A6;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #1F2D3D;
  text-decoration: underline;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C0CCDA;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1:hover,
.c1:focus {
  background-color: #d0d9e3;
  box-shadow: 0 8px 8px 0 rgba(132,146,166,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block adds the hoverBgDanger modifier 1`] = `
.c0 {
  background: transparent;
  color: #8492A6;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #1F2D3D;
  text-decoration: underline;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C0CCDA;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #d0d9e3;
  box-shadow: 0 8px 8px 0 rgba(132,146,166,0.4);
}

.c1:hover,
.c1:focus {
  background-color: #e41313;
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block adds the hoverCustom modifier 1`] = `
.c0 {
  background: transparent;
  color: #8492A6;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #1F2D3D;
  text-decoration: underline;
}

.c0:hover,
.c0:focus {
  color: #FF49DB;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C0CCDA;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #d0d9e3;
  box-shadow: 0 8px 8px 0 rgba(132,146,166,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block adds the hoverDanger modifier 1`] = `
.c0 {
  background: transparent;
  color: #8492A6;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #1F2D3D;
  text-decoration: underline;
}

.c0:hover,
.c0:focus {
  color: #cc1111;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C0CCDA;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #d0d9e3;
  box-shadow: 0 8px 8px 0 rgba(132,146,166,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block adds the hoverInfo modifier 1`] = `
.c0 {
  background: transparent;
  color: #8492A6;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #1F2D3D;
  text-decoration: underline;
}

.c0:hover,
.c0:focus {
  color: #0492d2;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C0CCDA;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #d0d9e3;
  box-shadow: 0 8px 8px 0 rgba(132,146,166,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block adds the hoverSuccess modifier 1`] = `
.c0 {
  background: transparent;
  color: #8492A6;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #1F2D3D;
  text-decoration: underline;
}

.c0:hover,
.c0:focus {
  color: #00a651;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C0CCDA;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #d0d9e3;
  box-shadow: 0 8px 8px 0 rgba(132,146,166,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block adds the hoverWarning modifier 1`] = `
.c0 {
  background: transparent;
  color: #8492A6;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #1F2D3D;
  text-decoration: underline;
}

.c0:hover,
.c0:focus {
  color: #f2c144;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C0CCDA;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #d0d9e3;
  box-shadow: 0 8px 8px 0 rgba(132,146,166,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block renders correctly 1`] = `
.c0 {
  background: transparent;
  color: #8492A6;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #1F2D3D;
  text-decoration: underline;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C0CCDA;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #d0d9e3;
  box-shadow: 0 8px 8px 0 rgba(132,146,166,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;

exports[`ButtonLink Block uses default styles if no hoverColor is provided with hoverCustom modifier 1`] = `
.c0 {
  background: transparent;
  color: #8492A6;
  font-size: 0.75rem;
  font-weight: 300;
  text-transform: uppercase;
}

.c0:hover,
.c0:focus {
  background: transparent;
  box-shadow: none;
  color: #1F2D3D;
  text-decoration: underline;
}

.c0:hover,
.c0:focus {
  color: #1F2D3D;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #C0CCDA;
  border-radius: 2px;
  border: solid 1px transparent;
  color: #FFF;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem 1.5rem;
  outline: none;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c1:hover,
.c1:focus {
  background-color: #d0d9e3;
  box-shadow: 0 8px 8px 0 rgba(132,146,166,0.4);
}

<button
  className="c0 c1"
>
  Login
</button>
`;
